--- a/pages/17973.html
+++ b/pages/17973.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8357/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8357/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -820,7 +820,7 @@ margin-left: 0em;
 <li><a href='#Orientifolding'>RR-Tadpole cancellation and Orientifolding</a></li>
 <li><a href='#IntersectionOfD6WithO8'>Intersections of D6s with D8/O8s</a></li>
 <li><a href='#relation_to_mtheory_on_manifolds'>Relation to M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li>
-<li><a href='#Cosmology'>Cosmology</a></li>
+<li><a href='#Cosmology'>Cosmology and Holography</a></li>
 <li><a href='#computer_scan_of_gepnermodel_compactifications'>Computer scan of Gepner-model compactifications</a></li>
 </ul>
 <li><a href='#references'>References</a></li>
@@ -952,11 +952,23 @@ margin-left: 0em;
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
 
-<h3 id="Cosmology">Cosmology</h3>
+<h3 id="Cosmology">Cosmology and Holography</h3>
 
-<p>Since the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/BPS+state">BPS</a> <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is conformal to the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spaces">anti de Sitter spaces</a> with the unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere around the brane, the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting D-brane models realizes the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> of an approximately (and possibly conformally) <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> (see for instance <a href="#Kaloper04">Kaloper 04</a>, <a href="#FlachiMinamitsuji09">Flachi-Minamitsuji 09</a>). The basic structure is hence that of <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+models">Randall-Sundrum models</a></em>, but details may differ.</p>
+<p>Since the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/BPS+state">BPS</a> <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is conformal to the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spaces">anti de Sitter spaces</a> with the unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere around the brane, the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting D-brane models realizes the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> of an <em>approximately</em> <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> (see for instance <a href="#Kaloper04">Kaloper 04</a>, <a href="#FlachiMinamitsuji09">Flachi-Minamitsuji 09</a>). The basic structure is hence that of <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+models">Randall-Sundrum models</a></em>, but details differ, such as notably in <em>warped throat</em> geometries, see <a href="#Uranga05">Uranga 05, section 18</a>.</p>
 
-<p>For instance <a href="#KlebanovStrassler00">Klebanov-Strassler 00</a> discuss ascpects of <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> on conincident ordinary and <em><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional</a></em> <a class="existingWikiWord" href="/nlab/show/D3-branes">D3-branes</a> at the <a class="existingWikiWord" href="/nlab/show/singularity">singularity</a> of a warped <a class="existingWikiWord" href="/nlab/show/conifold">conifold</a>.</p>
+<p>These warped throat models go back to <a href="#KlebanovStrassler00">Klebanov-Strassler 00</a> which discusses aspects of <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> on conincident ordinary and <em><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional</a></em> <a class="existingWikiWord" href="/nlab/show/D3-branes">D3-branes</a> at the <a class="existingWikiWord" href="/nlab/show/singularity">singularity</a> of a warped <a class="existingWikiWord" href="/nlab/show/conifold">conifold</a>. See also <a href="#KlebanovWitten98">Klebanov-Witten 98</a>.</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/KlebanovStrassler.jpg" width="640" />
+</center>
+<blockquote>
+<p>snippet grabbed from <a href="#Uranga05">Uranga 05, section 18</a></p>
+
+<p>here: “RS”=<a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+model">Randall-Sundrum model</a>; “KS”=<a href="#KlebanovStrassler00">Klebanov-Strassler 00</a></p>
+</blockquote>
+
+<p>In particular this means that <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> applies in <em>some approximation</em> to intersecting D-brane models (e.g. <a href="#Soda10">Soda 10</a>, <a href="#GHMO16">GHMO 16</a>), thus allowing to compute, to some approximation, <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a> in the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> on the intersecting branes in terms of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a> on the ambient warped throat <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo></mrow><annotation encoding="application/x-tex">\sim</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">AdS</a> (<a href="#KlebanovStrassler00">Klebanov-Strassler 00, section 6</a>)</p>
+
+<p>Such approximate version of <a class="existingWikiWord" href="/nlab/show/AdS-CFT">AdS-CFT</a> for gauge theories realized on intersecting D-branes are used for instance to estimate <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a> in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>, such as the <a class="existingWikiWord" href="/nlab/show/shear+viscosity">shear viscosity</a> of the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> (see the references <a href="quark-gluon+plasma#ReferencesViaAdSCFT">there</a>).</p>
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
 
@@ -1146,28 +1158,42 @@ margin-left: 0em;
 
 <h3 id="ReferencesCosmology">Cosmology</h3>
 
-<p>Discussion of the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting brane models (ambient <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo></mrow><annotation encoding="application/x-tex">\sim</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetimes">anti de Sitter spacetimes</a> with the intersecting branes at the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a>) includes the following (see also at <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+model">Randall-Sundrum model</a></em>)</p>
+<p>Discussion for <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> (ambient <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo></mrow><annotation encoding="application/x-tex">\sim</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetimes">anti de Sitter spacetimes</a> with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo></mrow><annotation encoding="application/x-tex">\sim</annotation></semantics></math> conformal intersecting branes at the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a>) includes the following (see also at <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+model">Randall-Sundrum model</a></em>):</p>
 
 <ul>
 <li id="KlebanovStrassler00">
 <p><a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Matthew+Strassler">Matthew Strassler</a>, <em>Supergravity and a Confining Gauge Theory: Duality Cascades and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>χ</mi> <mi>SB</mi></msup></mrow><annotation encoding="application/x-tex">\chi^{SB}</annotation></semantics></math>-Resolution of Naked Singularities</em>, JHEP 0008:052, 2000 (<a href="https://arxiv.org/abs/hep-th/0007191">arXiv:hep-th/0007191</a>)</p>
 </li>
 
-<li id="Uranga05">
-<p><a class="existingWikiWord" href="/nlab/show/Angel+Uranga">Angel Uranga</a>, section 18 of <em>TASI lectures on String Compactification, Model Building, and Fluxes</em>, 2005 (<a href="http://cds.cern.ch/record/933469/files/cer-002601054.pdf">pdf</a>)</p>
+<li id="KlebanovWitten98">
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Superconformal Field Theory on Threebranes at a Calabi-Yau Singularity</em>, Nucl.Phys.B536:199-218, 1998 (<a href="https://arxiv.org/abs/hep-th/9807080">arXiv:hep-th/9807080</a>)</p>
 </li>
 
 <li id="Kaloper04">
 <p>Nemanja Kaloper, <em>Origami World</em>, JHEP 0405 (2004) 061 (<a href="https://arxiv.org/abs/hep-th/0403208">arXiv:hep-th/0403208</a>)</p>
 </li>
 
+<li id="Uranga05">
+<p><a class="existingWikiWord" href="/nlab/show/Angel+Uranga">Angel Uranga</a>, section 18 of <em>TASI lectures on String Compactification, Model Building, and Fluxes</em>, 2005 (<a href="http://cds.cern.ch/record/933469/files/cer-002601054.pdf">pdf</a>)</p>
+</li>
+
 <li id="FlachiMinamitsuji09">
 <p>Antonino Flachi, Masato Minamitsuji, <em>Field localization on a brane intersection in anti-de Sitter spacetime</em>, Phys.Rev.D79:104021, 2009 (<a href="https://arxiv.org/abs/0903.0133">arXiv:0903.0133</a>)</p>
 </li>
 
-<li id="Teraguchi07">
-<p>Shunsuke Teraguchi, around slide 21 <em>String theory and its relation to particle physics</em>, 2007 (<a href="http://phys.cts.ntu.edu.tw/ppp7/talks/PPP7_Shunsuke_Teraguchi.pdf">pdf</a>)</p>
+<li id="Soda10">
+<p>Jiro Soda, <em>AdS/CFT on the brane</em>, Lect.Notes Phys.828:235-270, 2011 (<a href="https://arxiv.org/abs/1001.1011">arXiv:1001.1011</a>)</p>
 </li>
+
+<li id="GHMO16">
+<p>Gianluca Grignani, Troels Harmark, Andrea Marini, Marta Orselli, <em>The Born-Infeld/Gravity Correspondence</em>, Phys. Rev. D 94, 066009 (2016) (<a href="https://arxiv.org/abs/1602.01640">arXiv:1602.01640</a>)</p>
+</li>
+</ul>
+
+<p>Quick survey is in</p>
+
+<ul>
+<li id="Teraguchi07">Shunsuke Teraguchi, around slide 21 <em>String theory and its relation to particle physics</em>, 2007 (<a href="http://phys.cts.ntu.edu.tw/ppp7/talks/PPP7_Shunsuke_Teraguchi.pdf">pdf</a>)</li>
 </ul>
 </body></html>
 
@@ -1175,14 +1201,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 18, 2018 at 09:41:35.
+  Last revised on November 18, 2018 at 10:51:36.
   See the <a href="https://ncatlab.org/nlab/history/intersecting D-brane model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/intersecting D-brane model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
