--- a/pages/19578.html
+++ b/pages/19578.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -808,6 +808,18 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>based on</p>
+
+<ul>
+<li id="KlebanovStrassler00">
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Matthew+Strassler">Matthew Strassler</a>, <em>Supergravity and a Confining Gauge Theory: Duality Cascades and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>χ</mi> <mi>SB</mi></msup></mrow><annotation encoding="application/x-tex">\chi^{SB}</annotation></semantics></math>-Resolution of Naked Singularities</em>, JHEP 0008:052, 2000 (<a href="https://arxiv.org/abs/hep-th/0007191">arXiv:hep-th/0007191</a>)</p>
+</li>
+
+<li id="KlebanovWitten98">
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Superconformal Field Theory on Threebranes at a Calabi-Yau Singularity</em>, Nucl.Phys.B536:199-218, 1998 (<a href="https://arxiv.org/abs/hep-th/9807080">arXiv:hep-th/9807080</a>)</p>
+</li>
+</ul>
+
 <p>with further developments including</p>
 
 <ul>
@@ -831,14 +843,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 15, 2018 at 11:27:34.
+  Last revised on November 18, 2018 at 10:27:42.
   See the <a href="https://ncatlab.org/nlab/history/Randall-Sundrum model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Randall-Sundrum+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Randall-Sundrum+model/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Randall-Sundrum+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Randall-Sundrum+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Randall-Sundrum+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Randall-Sundrum+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Randall-Sundrum+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Randall-Sundrum+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Randall-Sundrum model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
