--- a/pages/4442.html
+++ b/pages/4442.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1018,7 +1018,7 @@ margin-left: 0em;
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
-<li><a href='#idea'>Idea</a></li>
+<li><a href='#Idea'>Idea</a></li>
 <li><a href='#examples'>Examples</a></li>
 <ul>
 <li><a href='#AdS5CFT4'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">AdS_5 / CFT_4</annotation></semantics></math> – Horizon limit of D3-branes</a></li>
@@ -1043,7 +1043,7 @@ margin-left: 0em;
 <li><a href='#'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">AdS_4 / CFT_3</annotation></semantics></math></a></li>
 <li><a href='#_2'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">AdS_5 / CFT_4</annotation></semantics></math></a></li>
 <li><a href='#_3'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">AdS_7 / CFT_6</annotation></semantics></math></a></li>
-<li><a href='#generalizations'>Generalizations</a></li>
+<li><a href='#generalization_beyond_exact_ads_andor_exact_cft'>Generalization beyond exact AdS and/or exact CFT</a></li>
 <li><a href='#Appications'>Applications</a></li>
 <ul>
 <li><a href='#to_gravity'>To gravity</a></li>
@@ -1055,7 +1055,7 @@ margin-left: 0em;
 </ul>
 </div>
 
-<h2 id="idea">Idea</h2>
+<h2 id="Idea">Idea</h2>
 
 <p>The <em>AdS-CFT correspondence</em> is at its basis the observation (<a href="#Witten98">Witten 98, Section 2.4</a>) that the classical <a class="existingWikiWord" href="/nlab/show/action+functionals">action functionals</a> for various <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> coupled to <a class="existingWikiWord" href="/nlab/show/Einstein+gravity">Einstein gravity</a> on <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> are, when expressed as <a class="existingWikiWord" href="/nlab/show/functions">functions</a> of the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a>-values of the <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a>, equal to the <a class="existingWikiWord" href="/nlab/show/generating+functions">generating functions</a> for the <a class="existingWikiWord" href="/nlab/show/correlators">correlators</a>/<a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> of a <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on that asymptotic boundary.</p>
 
@@ -1079,6 +1079,22 @@ margin-left: 0em;
 <p>For the archetypical case of AdS/CFT relating <a class="existingWikiWord" href="/nlab/show/N%3D4+D%3D4+super+Yang-Mills+theory">N=4 D=4 super Yang-Mills theory</a> to <a class="existingWikiWord" href="/nlab/show/type+IIB+string+theory">type IIB string theory</a> on <a class="existingWikiWord" href="/nlab/show/super+anti+de+Sitter+spacetime">super anti de Sitter spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo>×</mo><msup><mi>S</mi> <mn>5</mn></msup></mrow><annotation encoding="application/x-tex">AdS_5 \times S^5</annotation></semantics></math>, fine detailed checks of the correspondence have been performed (<a href="#BeisertEtAl10">Beisert et al. 10</a>, <a href="#Escobedo12">Escobedo 12</a>), see the section <em><a href="#Checks">Checks</a></em> below.</p>
 
 <p>If one relaxes the various assumptions that go into this exact form of the correspondence (<a class="existingWikiWord" href="/nlab/show/conformal+invariance">conformal invariance</a>, <a class="existingWikiWord" href="/nlab/show/supersymmetry">supersymmetry</a>, <a class="existingWikiWord" href="/nlab/show/large+N+limit">large N limit</a>, <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter geometry</a>) there is still a correspondence, albeit less exact. Such approximate forms of the AdS/CFT correspondence are being argued to be of use for understanding of the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> in <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> (<a href="#PolicastroSonStarinets01">Policastro-Son-Starinets 01</a>) and for various models in <a class="existingWikiWord" href="/nlab/show/solid+state+physics">solid state physics</a> (see <a href="#HartnollLucasSachdev16">Hartnoll-Lucas-Sachdev 16</a> and see at <em><a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a></em>).</p>
+
+<p>More in detail, since the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/BPS+state">BPS</a> <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is conformal to the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spaces">anti de Sitter spaces</a> with the unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere around the brane, the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> realizes the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> of an <em>approximately</em> <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> (see for instance <a href="#Kaloper04">Kaloper 04</a>, <a href="#FlachiMinamitsuji09">Flachi-Minamitsuji 09</a>). The basic structure is hence that of <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+models">Randall-Sundrum models</a></em>, but details differ, such as notably in <em>warped throat</em> geometries, see <a href="#Uranga05">Uranga 05, section 18</a>.</p>
+
+<p>These warped throat models go back to <a href="#KlebanovStrassler00">Klebanov-Strassler 00</a> which discusses aspects of <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> on conincident ordinary and <em><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional</a></em> <a class="existingWikiWord" href="/nlab/show/D3-branes">D3-branes</a> at the <a class="existingWikiWord" href="/nlab/show/singularity">singularity</a> of a warped <a class="existingWikiWord" href="/nlab/show/conifold">conifold</a>. See also <a href="#KlebanovWitten98">Klebanov-Witten 98</a></p>
+<center>
+<img src="https://ncatlab.org/nlab/files/KlebanovStrassler.jpg" width="640" />
+</center>
+<blockquote>
+<p>snippet grabbed from <a href="#Uranga05">Uranga 05, section 18</a></p>
+
+<p>here: “RS”=<a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+model">Randall-Sundrum model</a>; “KS”=<a href="#KlebanovStrassler00">Klebanov-Strassler 00</a></p>
+</blockquote>
+
+<p>In particular this means that AdS-CFT duality applies in <em>some approximation</em> to intersecting D-brane models (e.g. <a href="#Soda10">Soda 10</a>, <a href="#GHMO16">GHMO 16</a>), thus allowing to compute, to some approximation, <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a> in the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> on the intersecting branes in terms of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a> on the ambient warped throat <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo></mrow><annotation encoding="application/x-tex">\sim</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">AdS</a> (<a href="#KlebanovStrassler00">Klebanov-Strassler 00, section 6</a>)</p>
+
+<p>Such approximate version of <a class="existingWikiWord" href="/nlab/show/AdS-CFT">AdS-CFT</a> for gauge theories realized on intersecting D-branes are used for instance to estimate <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a> in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>, such as the <a class="existingWikiWord" href="/nlab/show/shear+viscosity">shear viscosity</a> of the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> (<a href="#PolicastroSonStarinets01">Policastro-Son-Starinets 01</a>).</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -1251,7 +1267,7 @@ margin-left: 0em;
 <img src="https://ncatlab.org/nlab/files/AdSCFTFrolovTseytlinLimitCheck.jpg" width="600" />
 </center>
 <blockquote>
-<p>graphics grabbed from <a href="#Escobedo12">Escobedo 12</a> spring</p>
+<p>graphics grabbed from <a href="#Escobedo12">Escobedo 12</a></p>
 </blockquote>
 
 <h2 id="formalizations">Formalizations</h2>
@@ -1587,10 +1603,42 @@ margin-left: 0em;
 <li id="FSS13"><a class="existingWikiWord" href="/nlab/show/Domenico+Fiorenza">Domenico Fiorenza</a>, <a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>, <em><a class="existingWikiWord" href="/schreiber/show/The+brane+bouquet">Super Lie n-algebra extensions, higher WZW models and super p-branes with tensor multiplet fields</a></em> (<a href="http://arxiv.org/abs/1308.5264">arXiv:1308.5264</a>)</li>
 </ul>
 
-<h3 id="generalizations">Generalizations</h3>
+<h3 id="generalization_beyond_exact_ads_andor_exact_cft">Generalization beyond exact AdS and/or exact CFT</h3>
+
+<p>Discussion for <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> (ambient <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo></mrow><annotation encoding="application/x-tex">\sim</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetimes">anti de Sitter spacetimes</a> with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∼</mo></mrow><annotation encoding="application/x-tex">\sim</annotation></semantics></math> conformal intersecting branes at the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a>) includes the following (see also at <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+model">Randall-Sundrum model</a></em>):</p>
 
 <ul>
-<li>Gianluca Grignani, Troels Harmark, Andrea Marini, Marta Orselli, <em>The Born-Infeld/Gravity Correspondence</em>, Phys. Rev. D 94, 066009 (2016) (<a href="https://arxiv.org/abs/1602.01640">arXiv:1602.01640</a>)</li>
+<li id="KlebanovStrassler00">
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Matthew+Strassler">Matthew Strassler</a>, <em>Supergravity and a Confining Gauge Theory: Duality Cascades and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>χ</mi> <mi>SB</mi></msup></mrow><annotation encoding="application/x-tex">\chi^{SB}</annotation></semantics></math>-Resolution of Naked Singularities</em>, JHEP 0008:052, 2000 (<a href="https://arxiv.org/abs/hep-th/0007191">arXiv:hep-th/0007191</a>)</p>
+</li>
+
+<li id="KlebanovWitten98">
+<p><a class="existingWikiWord" href="/nlab/show/Igor+Klebanov">Igor Klebanov</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Superconformal Field Theory on Threebranes at a Calabi-Yau Singularity</em>, Nucl.Phys.B536:199-218, 1998 (<a href="https://arxiv.org/abs/hep-th/9807080">arXiv:hep-th/9807080</a>)</p>
+</li>
+
+<li id="Kaloper04">
+<p>Nemanja Kaloper, <em>Origami World</em>, JHEP 0405 (2004) 061 (<a href="https://arxiv.org/abs/hep-th/0403208">arXiv:hep-th/0403208</a>)</p>
+</li>
+
+<li id="Uranga05">
+<p><a class="existingWikiWord" href="/nlab/show/Angel+Uranga">Angel Uranga</a>, section 18 of <em>TASI lectures on String Compactification, Model Building, and Fluxes</em>, 2005 (<a href="http://cds.cern.ch/record/933469/files/cer-002601054.pdf">pdf</a>)</p>
+</li>
+
+<li id="FlachiMinamitsuji09">
+<p>Antonino Flachi, Masato Minamitsuji, <em>Field localization on a brane intersection in anti-de Sitter spacetime</em>, Phys.Rev.D79:104021, 2009 (<a href="https://arxiv.org/abs/0903.0133">arXiv:0903.0133</a>)</p>
+</li>
+
+<li id="Soda10">
+<p>Jiro Soda, <em>AdS/CFT on the brane</em>, Lect.Notes Phys.828:235-270, 2011 (<a href="https://arxiv.org/abs/1001.1011">arXiv:1001.1011</a>)</p>
+</li>
+
+<li id="Teraguchi07">
+<p>Shunsuke Teraguchi, around slide 21 <em>String theory and its relation to particle physics</em>, 2007 (<a href="http://phys.cts.ntu.edu.tw/ppp7/talks/PPP7_Shunsuke_Teraguchi.pdf">pdf</a>)</p>
+</li>
+
+<li id="GHMO16">
+<p>Gianluca Grignani, Troels Harmark, Andrea Marini, Marta Orselli, <em>The Born-Infeld/Gravity Correspondence</em>, Phys. Rev. D 94, 066009 (2016) (<a href="https://arxiv.org/abs/1602.01640">arXiv:1602.01640</a>)</p>
+</li>
 </ul>
 
 <h3 id="Appications">Applications</h3>
@@ -1704,14 +1752,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 05:51:19.
+  Last revised on November 18, 2018 at 10:47:32.
   See the <a href="https://ncatlab.org/nlab/history/AdS-CFT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/71" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(71 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/72" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(72 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-CFT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
