--- a/pages/8209.html
+++ b/pages/8209.html
@@ -903,7 +903,7 @@ margin-left: 0em;
 <li><a href='#general'>General</a></li>
 <li><a href='#nonperturbative_aspects'>Non-perturbative aspects</a></li>
 <li><a href='#experimental_realization'>Experimental realization</a></li>
-<li><a href='#description_via_adscft'>Description via AdS/CFT</a></li>
+<li><a href='#ReferencesViaAdSCFT'>Description via AdS/CFT</a></li>
 </ul>
 </ul>
 </div>
@@ -998,7 +998,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id="description_via_adscft">Description via AdS/CFT</h3>
+<h3 id="ReferencesViaAdSCFT">Description via AdS/CFT</h3>
 
 <p>Description via <a class="existingWikiWord" href="/nlab/show/AdS%2FCFT">AdS/CFT</a> (see at <a class="existingWikiWord" href="/nlab/show/string+theory+results+applied+elsewhere">string theory results applied elsewhere</a>):</p>
 
@@ -1049,14 +1049,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 11:16:21.
+  Last revised on November 18, 2018 at 10:25:18.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
