--- a/pages/19578.html
+++ b/pages/19578.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -730,7 +730,9 @@ margin-left: 0em;
 
 <p>One original motivation for the RS-models was the idea that this setup could address the <a class="existingWikiWord" href="/nlab/show/hierarchy+problem">hierarchy problem</a>.</p>
 
-<p>Something at least close to Randall-Sundrum models naturally appears in <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a>: In <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> is part of the <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> of <a class="existingWikiWord" href="/nlab/show/D6-branes">D6-branes</a> <a class="existingWikiWord" href="/nlab/show/intersection">intersected</a> to a 3+1-dimensional subspace. By the general lore of <a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a>, <a class="existingWikiWord" href="/nlab/show/non-perturbative+effect">non-perturbatively</a> these <a class="existingWikiWord" href="/nlab/show/D6-branes">D6-branes</a> are <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> with <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter</a> <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a>. Hence the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> is qualitatively of Randall-Sundrum form, even if details may differ. For the quick idea see <a href="#Teraguchi07">Teraguchi 07, around slide 21</a>, for review and further pointers see <a href="#Uranga02">Uranga 02, section 18</a></p>
+<p>Something at least close to Randall-Sundrum models naturally appears in <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a>: In <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> is part of the <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> of <a class="existingWikiWord" href="/nlab/show/D6-branes">D6-branes</a> <a class="existingWikiWord" href="/nlab/show/intersection">intersected</a> to a 3+1-dimensional subspace. By the general lore of <a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a>, <a class="existingWikiWord" href="/nlab/show/non-perturbative+effect">non-perturbatively</a> these <a class="existingWikiWord" href="/nlab/show/D6-branes">D6-branes</a> are <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> with <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter</a> <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a>. Hence the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> is qualitatively of Randall-Sundrum form, even if details may differ. For the quick idea see <a href="#Teraguchi07">Teraguchi 07, around slide 21</a>, for review and further pointers see <a href="#Uranga02">Uranga 02, section 18</a>.</p>
+
+<p>For more on this see at <em><a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a></em> the section <em><a href="intersecting+D-brane+model#Cosmology">Cosmology and Holography</a></em>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -843,14 +845,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 18, 2018 at 10:27:42.
+  Last revised on November 18, 2018 at 11:08:35.
   See the <a href="https://ncatlab.org/nlab/history/Randall-Sundrum model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Randall-Sundrum+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Randall-Sundrum+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Randall-Sundrum+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Randall-Sundrum+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Randall-Sundrum+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Randall-Sundrum+model/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Randall-Sundrum+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Randall-Sundrum+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Randall-Sundrum model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
